<resources>
    <string name="app_name">TimeChangeTracker</string>

    <string name="title_name">Time Change Tracker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_new_schedule">New Schedule</string>
    <string name="name_of_location_or_business">Name of Location or business</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="ex_planet_fitness">Ex. Planet Fitness</string>
    <string name="ex_437_s_broadway">Ex. 437 S Broadway</string>
    <string name="ex_ca">Ex. CA</string>
    <string name="ex_los_angeles">Ex. Los Angeles</string>
    <string name="cancel">Cancel</string>
    <string name="asking_when_to_notify">How early do you want to be notified of the changes? (You may choose more than one.)</string>
    <string name="notify_day_before">A day before the hour modifications go into effect</string>
    <string name="notify_week_before">A week before the hour modifications go into effect</string>
    <string name="finish">Finish</string>
    <string name="notify_two_days_before">2 days before the hour modifications go into effect</string>
    <string name="notify_three_days_before">3 days before the hour modifications go into effect</string>
    <string name="notify_four_days_before">4 days before the hour modifications go into effect</string>
    <string name="notify_five_days_before">5 days before the hour modifications go into effect</string>
    <string name="notify_six_days_before">6 days before the hour modifications go into effect</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>
    <string name="day_of">The day of the schedule</string>
</resources>
